Clean up .gitignore by removing extraneous text
Remove unwanted text from .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ node_modules/
 # Optional: OS / Editor specific
 .DS_Store
 .vscode/
+
+scbhbjhufhjvvnnfhvc cncnnjdjc cnncnvnfbvhnnjvbfnfjvhfhvnfjcjjdkfbvnfjdjdjddjeuyr8UYRUGUsj
